--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Louell Uy
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Experienced Mining Professional | Aspiring Data Scientist | Design Thinking Practitioner
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: https://avatars2.githubusercontent.com/u/65573820?s=460&u=80afd8cf6df7d786aeb6e4527fb79bcbd8154e13&v=4
 #
 # Flags below are optional
 #
@@ -18,15 +17,15 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: louell at minemaven dot com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: louell
   instagram:
-  linkedin:
+  linkedin: https://www.linkedin.com/in/louelluy/
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: minemaven
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -41,13 +40,13 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://www.minemaven.com
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: http://louell.github.io/
 
 #
 # !! You don't need to change any of the configuration flags below !!
