--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ avatar: https://avatars2.githubusercontent.com/u/65573820?s=460&u=80afd8cf6df7d7
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: louell at minemaven dot com
+  email:
   facebook:
   flickr:
   github: louell
@@ -40,13 +40,13 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: http://www.minemaven.com
+url:
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: http://louell.github.io/
+baseurl: 
 
 #
 # !! You don't need to change any of the configuration flags below !!
